[gd_scene load_steps=13 format=3 uid="uid://crr5g4f7dda78"]

[ext_resource type="Script" path="res://scripts/menus/MainMenu.gd" id="1_50yib"]
[ext_resource type="Texture2D" uid="uid://fja1koewpagk" path="res://assets/textures/menu/title.png" id="1_ah42b"]
[ext_resource type="Texture2D" uid="uid://b6jlknn2vcnnd" path="res://assets/textures/menu/play.png" id="1_cwruj"]
[ext_resource type="Texture2D" uid="uid://dapflqqanpd1n" path="res://assets/textures/menu/play_ombre.png" id="2_lawd5"]
[ext_resource type="Texture2D" uid="uid://beyawl1litca8" path="res://assets/textures/menu/tuto_ombre.png" id="3_2f5qm"]
[ext_resource type="AudioStream" uid="uid://ddlmd3m32h6pk" path="res://assets/sounds/validation.wav" id="3_15nam"]
[ext_resource type="Texture2D" uid="uid://bwu83my0anrjt" path="res://assets/textures/menu/tuto.png" id="4_yxfqx"]
[ext_resource type="Texture2D" uid="uid://cgtudjnag2ydn" path="res://assets/textures/icons.png" id="6_clv01"]
[ext_resource type="Texture2D" uid="uid://cam7prhtnsc7s" path="res://assets/textures/tiles/lab.png" id="8_oog8d"]
[ext_resource type="Texture2D" uid="uid://tq8a4plahyqt" path="res://assets/textures/menu/cred.png" id="9_bagh3"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_5udl0"]
frames = 2
frame_0/texture = ExtResource("1_cwruj")
frame_0/duration = 0.5
frame_1/texture = ExtResource("2_lawd5")
frame_1/duration = 0.5

[sub_resource type="AnimatedTexture" id="AnimatedTexture_yywwr"]
frames = 2
frame_0/texture = ExtResource("4_yxfqx")
frame_0/duration = 0.5
frame_1/texture = ExtResource("3_2f5qm")
frame_1/duration = 0.5

[node name="MainMenu" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
texture = ExtResource("1_ah42b")
script = ExtResource("1_50yib")

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_15nam")

[node name="Play" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 21.0
offset_right = 32.0
offset_bottom = 31.0
texture_normal = ExtResource("2_lawd5")
texture_hover = SubResource("AnimatedTexture_5udl0")

[node name="Tutorial" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 36.0
offset_right = 61.0
offset_bottom = 43.0
texture_normal = ExtResource("3_2f5qm")
texture_hover = SubResource("AnimatedTexture_yywwr")

[node name="Interactive" type="Control" parent="."]
anchors_preset = 0
offset_top = 50.0
offset_right = 47.0
offset_bottom = 64.0
mouse_filter = 1

[node name="Floor" type="ColorRect" parent="Interactive"]
layout_mode = 0
offset_top = 12.0
offset_right = 47.0
offset_bottom = 13.0
color = Color(0, 0, 0, 1)

[node name="Lab" type="TextureButton" parent="Interactive"]
z_index = 2
layout_mode = 0
offset_left = 34.0
offset_right = 46.0
offset_bottom = 12.0
texture_normal = ExtResource("8_oog8d")

[node name="CreditsSprite" type="Sprite2D" parent="."]
position = Vector2(57, 57)
texture = ExtResource("6_clv01")
hframes = 5
vframes = 2
frame = 1

[node name="CreditsButton" type="TextureButton" parent="CreditsSprite"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2

[node name="Credits" type="TextureRect" parent="."]
z_index = 4
layout_mode = 0
offset_top = 64.0
offset_right = 64.0
offset_bottom = 83.0
texture = ExtResource("9_bagh3")

[node name="close" type="TextureButton" parent="Credits"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 6.0

[node name="mayayoh" type="TextureButton" parent="Credits"]
layout_mode = 0
offset_top = 6.0
offset_right = 31.0
offset_bottom = 12.0

[node name="coco3167" type="TextureButton" parent="Credits"]
layout_mode = 0
offset_left = 32.0
offset_top = 6.0
offset_right = 64.0
offset_bottom = 12.0

[node name="nihilaeth" type="TextureButton" parent="Credits"]
layout_mode = 0
offset_top = 13.0
offset_right = 64.0
offset_bottom = 19.0

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Interactive/Lab" to="." method="_on_lab_pressed"]
[connection signal="pressed" from="CreditsSprite/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Credits/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Credits/mayayoh" to="." method="_on_mayayoh_pressed"]
[connection signal="pressed" from="Credits/coco3167" to="." method="_on_coco_3167_pressed"]
[connection signal="pressed" from="Credits/nihilaeth" to="." method="_on_nihilaeth_pressed"]
